--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
 
 .title {
   font-family: "Edu TAS Beginner", cursive;
+  font-weight: bold;
 }
 
 .date {
@@ -31,7 +32,6 @@ header {
 .page-title {
   padding: 20px;
   font-size: 4rem;
-  font-weight: bold;
 }
 
 /* # MAIN */
@@ -39,6 +39,31 @@ header {
 main {
   background-image: url(../img/cork.png);
   background-repeat: repeat;
-  height: 100vh;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+}
+
+.container {
+  width: 1000px;
+  margin-top: 3rem;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.col {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card {
+  background-color: white;
+  padding: 1rem;
 }
 
