--- a/css/style.css
+++ b/css/style.css
@@ -46,39 +46,51 @@ main {
 
 #container {
   width: 1000px;
-  margin-top: 3rem;
+  margin: 3rem 0;
 }
 
 .row {
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
+  justify-content: center;
 }
 
 .col {
-  width: 30%;
+  width: 32%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .col .card {
-  width: 15rem;
+  width: 20rem;
   background-color: white;
   padding: 1rem;
+  overflow: hidden;
   position: relative;
   box-shadow: 1px 2px black;
 }
 
 .card .card-img {
-  max-width: 100%;
+  width: 100%;
 }
 
 .pin {
   width: 1.5rem;
   position: absolute;
-  bottom: 94%;
+  bottom: 95%;
   left: 50%;
   transform: translateX(-50%);
 }
 
+@media screen and (max-width: 1000px) {
+
+  #container {
+    width: 800px;
+  }
+
+  .col {
+    width: 49%;
+  }
+}
