--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,10 @@
   font-weight: bold;
 }
 
+.d-none {
+  display: none;
+}
+
 .date {
   font-family: "Sometype Mono", monospace;
 }
@@ -61,6 +65,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
 }
 
 .col .card {
@@ -68,8 +73,11 @@ main {
   background-color: white;
   padding: 1rem;
   overflow: hidden;
-  position: relative;
   box-shadow: 1px 2px black;
+}
+
+.card:hover {
+  cursor: pointer;
 }
 
 .card .card-img {
@@ -82,6 +90,30 @@ main {
   bottom: 95%;
   left: 50%;
   transform: translateX(-50%);
+}
+
+.overlay {
+  text-align: center;
+  position: relative;
+  position: fixed;
+  z-index: 10;
+  inset: 0;
+
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.active-pic {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  width: 30%;
+}
+
+#close-button {
+  text-align: center;
+  margin-top: 60px;
+  font-size: 2rem;
 }
 
 @media screen and (max-width: 1000px) {
