--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,12 @@ main {
 
 .card:hover {
   cursor: pointer;
+  transform: scale(1.05) rotate(10deg);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
+}
+
+.card:hover .pin {
+  display: none;
 }
 
 .card .card-img {
@@ -100,6 +106,7 @@ main {
   inset: 0;
 
   background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(5px);
 }
 
 .active-pic {
@@ -114,6 +121,10 @@ main {
   text-align: center;
   margin-top: 60px;
   font-size: 2rem;
+}
+
+#close-button:hover {
+  cursor: pointer;
 }
 
 @media screen and (max-width: 1000px) {
