--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@
   border: 2px dashed red;
 }
 
+/* # RESET */
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -76,16 +78,6 @@ main {
   box-shadow: 1px 2px black;
 }
 
-.card:hover {
-  cursor: pointer;
-  transform: scale(1.05) rotate(10deg);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
-}
-
-.card:hover .pin {
-  display: none;
-}
-
 .card .card-img {
   width: 100%;
 }
@@ -97,6 +89,20 @@ main {
   left: 50%;
   transform: translateX(-50%);
 }
+
+/* # HOVER */
+
+.card:hover {
+  cursor: pointer;
+  transform: scale(1.05) rotate(10deg);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
+}
+
+.card:hover .pin {
+  display: none;
+}
+
+/* # OVERLAY */
 
 .overlay {
   text-align: center;
